# advanced-nma-pooling

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  DECISIONS.md  E156-PROTOCOL.md  F1000_Concrete_Submission_Fixes.md  F1000_Cover_Letter.docx  F1000_Cover_Letter.md  F1000_MultiPersona_Peer_Review.md  F1000_MultiPersona_Review.md  F1000_Reviewer_Rerun_Manifest.md  F1000_Software_Tool_Article.docx  F1000_Software_Tool_Article.md  F1000_Submission_Checklist_RealReview.md  README.md  RELEASE.md  push.sh  pyproject.toml  requirements.txt  review-findings.md
.github/workflows/: ci.yml  release.yml
artifacts/: publication-suite.json  publication-summary.md
artifacts/paper1-bundle/: manifest.json  paper1-executive-summary.md
configs/: example-analysis.json  example-benchmark.json  example-bias-adjusted-bayesian.json  example-bias-adjusted.json  example-bias-sensitivity.json  example-mlnmr.json  example-paper1-bundle.json  example-publication-suite.json  example-survival-nph.json
docs/: protocol.md
docs/methods/: paper1-protocol.md  (+2 more)
e156-submission/: config.json  index.html  paper.json  paper.md  protocol.md
f1000_artifacts/: SHA256SUMS-v0.1.1.txt  execution_environment.md  figure_captions.md  flowchart_blueprint.md  release-manifest-v0.1.1.json  tutorial_walkthrough.md  validation_summary.md
pipelines/: run_analysis.py  run_benchmark.py  run_bias_adjusted.py  run_bias_adjusted_bayesian.py  run_bias_sensitivity.py  run_mlnmr.py  run_mlnmr_bayesian.py  run_paper1_bundle.py  run_publication_suite.py  run_survival_nph.py
scripts/: release_manifest.py
(+73 files in other folders)
