[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nma-pool"
version = "0.1.1"
description = "Advanced pooling models for network meta-analysis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Advanced NMA Core Team" }
]
keywords = ["network-meta-analysis", "meta-analysis", "evidence-synthesis", "bayesian", "survival-analysis"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=2.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pytest>=8.0",
  "twine>=6.0"
]
stan = [
  "cmdstanpy>=1.2"
]

[project.scripts]
nma-pool = "nma_pool.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
license-files = ["LICENSE"]

[tool.setuptools.package-data]
"nma_pool.models" = ["stan/*.stan"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
addopts = "-q"
